--- a/package.json
+++ b/package.json
@@ -15,37 +15,38 @@
   },
   "homepage": "https://github.com/anosikeosifo/tilte#readme",
   "dependencies": {
+    "autoprefixer": "^6.5.0",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "6.18.2",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.8",
     "babel-polyfill": "6.16.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.26.0",
+    "es6-promise": "^4.0.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "history": "4.4.1",
     "jest-cli": "17.0.3",
+    "jshint": "^2.9.3",
+    "jshint-loader": "^0.8.3",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "1.1.1",
     "react": "15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-addons-transition-group": "15.4.1",
     "react-addons-update": "15.4.1",
     "react-dom": "15.4.1",
-    "react-router": "3.0.0",
     "react-redux": "4.4.6",
+    "react-router": "3.0.0",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "0.13.1",
     "webpack": "1.13.3",
     "webpack-dev-server": "1.16.2",
-    "es6-promise": "^4.0.3",
-    "jshint": "^2.9.3",
-    "jshint-loader": "^0.8.3",
-    "sass-loader": "^4.0.2",
-    "node-sass": "^3.4.2",
-    "style-loader": "0.13.1",
-    "whatwg-fetch": "^2.0.1",
-    "autoprefixer": "^6.5.0",
-    "autoprefixer-loader": "^3.2.0",
-    "css-loader": "^0.26.0",
-    "postcss-loader": "1.1.1",
-    "extract-text-webpack-plugin": "^1.0.1"
+    "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
     "test": "jest",
