--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "react-addons-transition-group": "15.4.1",
     "react-addons-update": "15.4.1",
     "react-dom": "15.4.1",
+    "react-masonry-component": "^4.4.0",
     "react-redux": "4.4.6",
     "react-router": "3.0.0",
+    "react-select": "^1.0.0-rc.2",
     "redux": "3.6.0",
+    "redux-saga": "^0.13.0",
     "redux-thunk": "2.1.0",
     "sass-loader": "^4.0.2",
     "style-loader": "0.13.1",
