--- a/package.json
+++ b/package.json
@@ -15,41 +15,42 @@
   },
   "homepage": "https://github.com/anosikeosifo/tilte#readme",
   "dependencies": {
-    "autoprefixer": "^6.5.0",
-    "autoprefixer-loader": "^3.2.0",
-    "babel-core": "6.20.0",
+    "autoprefixer": "6.6.1",
+    "autoprefixer-loader": "3.2.0",
+    "babel-core": "6.21.0",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
     "babel-polyfill": "6.20.0",
     "babel-preset-es2015": "6.18.0",
+    "babel-preset-env": "^1.1.7",
     "babel-preset-react": "6.16.0",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.26.0",
-    "es6-promise": "^4.0.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "history": "4.5.0",
-    "jest-cli": "18.0.0",
-    "jshint": "^2.9.3",
-    "jshint-loader": "^0.8.3",
-    "node-sass": "^4.0.0",
+    "classnames": "2.2.5",
+    "css-loader": "0.26.1",
+    "es6-promise": "4.0.5",
+    "extract-text-webpack-plugin": "1.0.1",
+    "history": "4.5.1",
+    "jest-cli": "18.1.0",
+    "jshint": "2.9.4",
+    "jshint-loader": "0.8.3",
+    "node-sass": "^4.2.0",
     "postcss-loader": "1.2.1",
-    "react": "15.4.1",
-    "react-addons-test-utils": "^15.4.1",
-    "react-addons-transition-group": "15.4.1",
-    "react-addons-update": "15.4.1",
-    "react-dom": "15.4.1",
-    "react-masonry-component": "^4.4.0",
+    "react": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-addons-transition-group": "15.4.2",
+    "react-addons-update": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-masonry-component": "5.0.3",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
-    "react-select": "^1.0.0-rc.2",
+    "react-select": "1.0.0-rc.2",
     "redux": "3.6.0",
-    "redux-saga": "^0.13.0",
+    "redux-saga": "0.14.2",
     "redux-thunk": "2.1.0",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
-    "whatwg-fetch": "^2.0.1"
+    "whatwg-fetch": "2.0.1"
   },
   "scripts": {
     "test": "jest",
