--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Tilte",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "webpack.config.prod.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anosikeosifo/tilte.git"
@@ -21,27 +21,34 @@
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
     "babel-polyfill": "6.20.0",
-    "babel-preset-es2015": "6.18.0",
     "babel-preset-env": "^1.1.7",
+    "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
+    "caniuse-api": "^1.5.2",
+    "caniuse-db": "^1.0.30000611",
     "classnames": "2.2.5",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.26.1",
     "es6-promise": "4.0.5",
     "extract-text-webpack-plugin": "1.0.1",
     "history": "4.5.1",
+    "image-webpack-loader": "^3.1.0",
     "jest-cli": "18.1.0",
     "jshint": "2.9.4",
     "jshint-loader": "0.8.3",
+    "koa": "2.0.0-alpha.3",
+    "koa-convert": "^1.2.0",
+    "koa-static": "^2.0.0",
     "node-sass": "^4.2.0",
-    "postcss-loader": "1.2.1",
+    "postcss-loader": "1.2.2",
     "react": "15.4.2",
     "react-addons-test-utils": "15.4.2",
     "react-addons-transition-group": "15.4.2",
     "react-addons-update": "15.4.2",
     "react-dom": "15.4.2",
     "react-masonry-component": "5.0.3",
-    "react-redux": "5.0.1",
-    "react-router": "3.0.0",
+    "react-redux": "5.0.2",
+    "react-router": "3.0.1",
     "react-select": "1.0.0-rc.2",
     "redux": "3.6.0",
     "redux-saga": "0.14.2",
@@ -52,22 +59,24 @@
     "webpack-dev-server": "1.16.2",
     "whatwg-fetch": "2.0.1"
   },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "scripts": {
     "test": "jest",
-    "start": "node_modules/.bin/webpack-dev-server --progress"
+    "start": "NODE_ENV=production webpack --progress --config webpack.config.prod.js && NODE_ENV=production node server.js",
+    "dev": "webpack-dev-server --progress --colors --watch",
+    "build": "webpack --progress --colors --watch"
   },
-  
   "jest": {
     "transform": {
       ".*": "<rootDir>/node_modules/babel-jest"
     },
-
     "unmockedModulePathPatterns": [
       "node_modules/react/",
       "node_modules/enzyme/"
     ]
   },
-
   "devDependencies": {
     "enzyme": "^2.7.0",
     "react-addons-test-utils": "^15.4.2"
