--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Tilte",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.prod.js",
+  "main": "webpack.config.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anosikeosifo/tilte.git"
@@ -64,9 +64,9 @@
   ],
   "scripts": {
     "test": "jest",
-    "start": "NODE_ENV=production webpack --progress --config webpack.config.prod.js && NODE_ENV=production node server.js",
+    "staging": "NODE_ENV=production webpack --progress --config webpack.config.prod.js && NODE_ENV=production node server.js",
     "dev": "webpack-dev-server --progress --colors --watch",
-    "build": "webpack --progress --colors --watch"
+    "start": "webpack  --watch --progress --colors"
   },
   "jest": {
     "transform": {
