--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "history": "4.5.1",
     "image-webpack-loader": "^3.1.0",
+    "immutability-helper": "^2.1.1",
     "jest-cli": "18.1.0",
     "koa": "2.0.0-alpha.3",
     "koa-convert": "^1.2.0",
@@ -42,7 +43,6 @@
     "react": "15.4.2",
     "react-addons-test-utils": "15.4.2",
     "react-addons-transition-group": "15.4.2",
-    "react-addons-update": "15.4.2",
     "react-dom": "15.4.2",
     "react-masonry-component": "5.0.3",
     "react-redux": "5.0.2",
@@ -64,7 +64,7 @@
     "test": "jest",
     "staging": "NODE_ENV=production webpack --progress --config webpack.config.prod.js && NODE_ENV=production node server.js",
     "dev": "webpack-dev-server --progress --colors --watch",
-    "start": "NODE_ENV=production webpack --progress --config webpack.config.prod.js && NODE_ENV=production node server.js"
+    "start": "npm run dev && webpack --watch"
   },
   "jest": {
     "transform": {
