T-006: Immplement routing for momnent-details view Setup MomentDetails view

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "test": "jest",
     "staging": "webpack --progress --config webpack.config.prod.js && node server.js",
     "dev": "webpack-dev-server --progress --colors --watch",
-    "start": "npm run dev && webpack --watch"
+    "start": "npm run dev | webpack --watch"
   },
   "jest": {
     "transform": {
