T-009 Implement interactions on the comment-input component

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "test": "jest",
     "staging": "webpack --progress --config webpack.config.prod.js && node server.js",
     "dev": "webpack-dev-server --progress --colors --watch",
-    "start": "npm run staging"
+    "start": "npm run dev | webpack -w"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./node_modules/jest-enzyme/lib/index.js",
