--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/anosikeosifo/tilte#readme",
   "dependencies": {
+    "animated-scrollto": "^1.1.0",
     "autoprefixer": "6.7.2",
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.23.1",
@@ -30,13 +31,15 @@
     "classnames": "2.2.5",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.26.1",
-    "dotenv": "^4.0.0",
+    "dotenv-webpack": "^1.5.0",
     "es6-promise": "4.0.5",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "history": "4.5.1",
     "image-webpack-loader": "^3.2.0",
     "immutability-helper": "^2.1.1",
     "jest-cli": "18.1.0",
+    "jwt-decode": "^2.2.0",
+    "jwt-simple": "^0.5.1",
     "koa": "2.0.0-alpha.3",
     "koa-convert": "^1.2.0",
     "koa-static": "^2.1.0",
@@ -51,6 +54,7 @@
     "react-masonry-component": "5.0.3",
     "react-redux": "5.0.2",
     "react-router": "3.0.2",
+    "react-router-dom": "^4.1.1",
     "react-select": "1.0.0-rc.3",
     "redux": "3.6.0",
     "redux-saga": "0.14.3",
